[gd_scene load_steps=5 format=3 uid="uid://dbmrkfs56w4a1"]

[ext_resource type="Texture2D" uid="uid://hdhwgw23dh6m" path="res://Assets/Sprites/GUI/2 Bars/HealthBar3.png" id="1_3uh7p"]
[ext_resource type="Script" uid="uid://dnsaipja2suj3" path="res://scenes/UI/GameHUD.gd" id="1_6dsgf"]
[ext_resource type="Texture2D" uid="uid://cmt6111mwjkgw" path="res://Assets/Sprites/GUI/1 Frames/Frame_02.png" id="2_83a3r"]
[ext_resource type="Texture2D" uid="uid://cwhgdecfwqxme" path="res://Assets/Sprites/GUI/2 Bars/EnergyBar2.png" id="4_27g22"]

[node name="GameHUD" type="CanvasLayer"]
script = ExtResource("1_6dsgf")

[node name="HealthContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 100.0
offset_top = 40.0
offset_right = 350.0
offset_bottom = 80.0

[node name="HealthFrame" type="TextureRect" parent="HealthContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_83a3r")
expand_mode = 1

[node name="HealthLabel" type="Label" parent="HealthContainer"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -13.0
offset_right = 75.0
offset_bottom = 13.0
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.517647)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 18
text = "HEALTH"
vertical_alignment = 1

[node name="HealthBar" type="TextureProgressBar" parent="HealthContainer"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -169.0
offset_top = -11.0
offset_right = 11.0
offset_bottom = 9.0
grow_horizontal = 0
grow_vertical = 2
value = 100.0
nine_patch_stretch = true
texture_progress = ExtResource("1_3uh7p")
tint_progress = Color(0.839216, 0.203922, 0.203922, 1)

[node name="EnergyContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 100.0
offset_top = 80.0
offset_right = 350.0
offset_bottom = 120.0

[node name="EnergyFrame" type="TextureRect" parent="EnergyContainer"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_83a3r")
expand_mode = 1

[node name="EnergyLabel" type="Label" parent="EnergyContainer"]
visible = false
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -13.0
offset_right = 75.0
offset_bottom = 13.0
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.517647)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 18
text = "ENERGY"
vertical_alignment = 1

[node name="EnergyBar" type="TextureProgressBar" parent="EnergyContainer"]
visible = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -190.0
offset_top = -10.0
offset_right = -10.0
offset_bottom = 10.0
grow_horizontal = 0
grow_vertical = 2
value = 100.0
nine_patch_stretch = true
texture_progress = ExtResource("4_27g22")
tint_progress = Color(0.172549, 0.388235, 0.839216, 1)

[node name="ScoreContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 790.0
offset_top = 40.0
offset_right = 1040.0
offset_bottom = 80.0

[node name="ScoreFrame" type="TextureRect" parent="ScoreContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_83a3r")
expand_mode = 1

[node name="ScoreLabel" type="Label" parent="ScoreContainer"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -13.0
offset_right = 75.0
offset_bottom = 13.0
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.517647)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 18
text = "SCORE"
vertical_alignment = 1

[node name="ScoreValue" type="Label" parent="ScoreContainer"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -170.0
offset_top = -13.0
offset_right = -10.0
offset_bottom = 13.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.517647)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 18
text = "0"
horizontal_alignment = 2
vertical_alignment = 1
